crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_addition_and_subtraction.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"1 + 2 - 3 + 4\")"
---
Expr {
    kind: Binary(
        Binary {
            left: Expr {
                kind: Binary(
                    Binary {
                        left: Expr {
                            kind: Binary(
                                Binary {
                                    left: Expr {
                                        kind: Num(
                                            Num {
                                                value: "1",
                                            },
                                        ),
                                        span: 0..1,
                                        inferred_type: None,
                                    },
                                    op: Plus,
                                    right: Expr {
                                        kind: Num(
                                            Num {
                                                value: "2",
                                            },
                                        ),
                                        span: 4..5,
                                        inferred_type: None,
                                    },
                                },
                            ),
                            span: 0..5,
                            inferred_type: None,
                        },
                        op: Minus,
                        right: Expr {
                            kind: Num(
                                Num {
                                    value: "3",
                                },
                            ),
                            span: 8..9,
                            inferred_type: None,
                        },
                    },
                ),
                span: 0..9,
                inferred_type: None,
            },
            op: Plus,
            right: Expr {
                kind: Num(
                    Num {
                        value: "4",
                    },
                ),
                span: 12..13,
                inferred_type: None,
            },
        },
    ),
    span: 0..13,
    inferred_type: None,
}
