crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_assignment-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"x = y = z\")"
---
Expr {
    kind: Assign {
        left: Expr {
            kind: Identifier(
                "x",
            ),
            span: 0..1,
        },
        op: Assign,
        right: Expr {
            kind: Assign {
                left: Expr {
                    kind: Identifier(
                        "y",
                    ),
                    span: 4..5,
                },
                op: Assign,
                right: Expr {
                    kind: Identifier(
                        "z",
                    ),
                    span: 8..9,
                },
            },
            span: 4..9,
        },
    },
    span: 0..9,
}
