crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_assignment-6.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"x *= 2\")"
---
Expr {
    kind: Assign {
        left: Expr {
            kind: Identifier(
                "x",
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
        },
        op: MulAssign,
        right: Expr {
            kind: Literal(
                Number(
                    "2",
                ),
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
        },
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
}
