crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_assignment-7.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"x /= 2\")"
---
Assign(
    Assign {
        span: 0..6,
        left: Ident(
            Ident {
                name: "x",
                span: 0..1,
            },
        ),
        op: DivAssign,
        right: Num(
            Num {
                span: 5..6,
                value: "2",
            },
        ),
    },
)
