crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_assignment-8.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"x %= 2\")"
---
Expr {
    kind: Assign {
        left: Expr {
            kind: Identifier(
                "x",
            ),
            span: 0..1,
        },
        op: ModAssign,
        right: Expr {
            kind: Literal(
                Number(
                    "2",
                ),
            ),
            span: 5..6,
        },
    },
    span: 0..6,
}
