crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_assignment.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"x = y\")"
---
Assign(
    Assign {
        span: 0..5,
        left: Ident(
            Ident {
                name: "x",
                span: 0..1,
            },
        ),
        op: Assign,
        right: Ident(
            Ident {
                name: "y",
                span: 4..5,
            },
        ),
    },
)
