crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_async_await.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"\n            async fn () { \n                let x = await foo()\n                return x\n            }\n        \"#)"
---
Expr {
    kind: Function(
        Function {
            type_params: None,
            params: [],
            body: Block(
                Block {
                    span: 24..102,
                    stmts: [
                        Stmt {
                            kind: Let {
                                is_declare: false,
                                is_var: false,
                                pattern: Pattern {
                                    kind: Ident(
                                        BindingIdent {
                                            name: "x",
                                            span: 48..49,
                                            mutable: false,
                                        },
                                    ),
                                    span: 48..49,
                                    inferred_type: None,
                                },
                                expr: Some(
                                    Expr {
                                        kind: Await(
                                            Await {
                                                arg: Expr {
                                                    kind: Call(
                                                        Call {
                                                            callee: Expr {
                                                                kind: Ident(
                                                                    Ident {
                                                                        name: "foo",
                                                                        span: 58..61,
                                                                    },
                                                                ),
                                                                span: 58..61,
                                                                inferred_type: None,
                                                            },
                                                            type_args: None,
                                                            args: [],
                                                            opt_chain: false,
                                                        },
                                                    ),
                                                    span: 58..63,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        span: 52..63,
                                        inferred_type: None,
                                    },
                                ),
                                type_ann: None,
                            },
                            span: 44..63,
                            inferred_type: None,
                        },
                        Stmt {
                            kind: Return {
                                arg: Some(
                                    Expr {
                                        kind: Ident(
                                            Ident {
                                                name: "x",
                                                span: 87..88,
                                            },
                                        ),
                                        span: 87..88,
                                        inferred_type: None,
                                    },
                                ),
                            },
                            span: 87..88,
                            inferred_type: None,
                        },
                    ],
                },
            ),
            type_ann: None,
            throws: None,
            is_async: true,
            is_gen: false,
        },
    ),
    span: 13..102,
    inferred_type: None,
}
