crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_call_expr.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: parse(src)
---
Expr {
    kind: Call(
        Call {
            callee: Expr {
                kind: Member(
                    Member {
                        object: Expr {
                            kind: Ident(
                                Ident {
                                    name: "foo",
                                    span: 0..3,
                                },
                            ),
                            span: 0..3,
                            inferred_type: None,
                        },
                        property: Computed(
                            ComputedPropName {
                                span: 0..7,
                                expr: Expr {
                                    kind: Ident(
                                        Ident {
                                            name: "bar",
                                            span: 4..7,
                                        },
                                    ),
                                    span: 4..7,
                                    inferred_type: None,
                                },
                            },
                        ),
                    },
                ),
                span: 0..7,
                inferred_type: None,
            },
            type_args: None,
            args: [
                Expr {
                    kind: Num(
                        Num {
                            value: "5",
                        },
                    ),
                    span: 9..10,
                    inferred_type: None,
                },
                Expr {
                    kind: Num(
                        Num {
                            value: "10",
                        },
                    ),
                    span: 12..14,
                    inferred_type: None,
                },
            ],
        },
    ),
    span: 0..15,
    inferred_type: None,
}
